--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,12 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    # - uses: actions/setup-node@v4
     - uses: oven-sh/setup-bun@v2
       with:
-        bun-version: "latest"
+        bun-version: latest
     - name: Install dependencies
-      run: bun install
+      run: bun install --frozen-lockfile
     - name: Install Playwright Browsers
       run: bun x playwright install --with-deps
     - name: Run Playwright tests
