feat: rename job to playwright-tests and set environment variable for base URL

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,10 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  test:
+  playwright-tests:
+    name: Playwright E2E Tests
+    env:
+      NEXT_PUBLIC_BASE_URL: "http://localhost:3000" 
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
