--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -50,9 +50,9 @@ jobs:
 
     - name: Run Playwright tests
       run: bun x playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+    # - uses: actions/upload-artifact@v4
+    #   if: ${{ !cancelled() }}
+    #   with:
+    #     name: playwright-report
+    #     path: playwright-report/
+    #     retention-days: 30
